--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <meta content='width=device-width, initial-scale=1, user-scalable=1, minimum-scale=1, maximum-scale=5'
   name='viewport' />
 <meta content='IE=edge' http-equiv='X-UA-Compatible' />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+ <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Jost:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.19/dist/sweetalert2.all.min.js">
 </script>
 <link href="style.css" rel="stylesheet" type="text/css" />
@@ -19,7 +19,7 @@
       background-size: cover;
       background-repeat: no-repeat; 
       background-position: center;
-      font-family: "Roboto", sans-serif;
+      font-family: "Jost", serif;
     }
 
     @keyframes anim {
@@ -52,21 +52,16 @@
     <div class='chatBox'>
       <div id='data' class='chatContent'>
         <div class='chatText'>
-          <span id='text1'>Hi pretty gimana harinya?</span>
-          <span id='text2'>Nggak nyangka ya kita bisa sejauh ini.</span>
-          <span id='text3'> Thank you for all this time, for being patient in weaving love with me.</span>
-          <span id='text4'> Makasih juga udah ngebuat aku ngerasa dicintai dengan semangat yang sama.</span>
-          <span id='text5'>You're my happy place, sama kamu aku bener bener ngerasa bahagia.</span>
-          <span id='text6'> Aku seneng banget bisa manggil kamu 'milikku' ke banyak orang.</span>
-          <span id='text7'>Makasih udah bikin hidupku berwarna, walau aku tau kamu kadang kadang lagi gak baik.</span>
-          <span id='text8'>Please, make me ur home too. Ceritain ke aku gimana hari-harimu.</span>
-          <span id='text10'>karena aku mau buat kamu nyaman dan bahagia punya aku jadi pasanganmu</span>
-          <span id='text11'>if one day someone asks me, "what is the reason you're happy?" i will definitely answer you</span>
-          <span id="text12">if the person asks again, "why?" karena kamu adalah orang yang selalu ada disisi-ku. and only you can make me fall in love this deeply, if i said that i don't love you, that would be a lie</span>
-          <span id="text13">because i love you more than words can say.</span>
-          <span id="text14">I don't need anything, I just need you in here as my world, as my home, my best home.</span>
-          <span id="text15">So don't think I'll leave you, because that's the stupidest thing I would ever do</span>
-          <span id="text16">I love you more than a lot.</span>
+          <span id='text1'> that i love you so much. </span>
+          <span id='text2'>i have loved you ever since i can remember</span>
+          <span id='text3'> all i know is i wanna be with you as long as possible. </span>
+          <span id='text4'>  i've pulled an all nighter just listening to music and thinking of you</span>
+          <span id='text5'> i've written countless letters to you explaining my feelings</span>
+          <span id='text6'>i want to keep you around forever and tell you everything</span>
+          <span id='text7'>from the bottom of my heart, I'm glad we met.</span>
+          <span id='text8'> you showed me what it's like to be someone's first priority</span>
+          <span id='text10'>so that everything that happened between us are will always be the most important thingy to me</span>
+          <span id='text11'> my live is just filled by such a precious light cuz of you. </span>
           <span id='text9'>tap love<label class="lovein" onclick="selesai();">&#9829;</label></span>
         </div>
       </div>
@@ -83,9 +78,9 @@
 
   <script type="text/javascript">
     //Ucapan Terakhir
-    var a = 0, finish; finish = "why do i love you? oh dear there’s a lot of reasons but i’ll do my best to keep it simple. i love you because you can bring me out of my sadness and make me the happiest girl/boy in the world with just a smile. i love you you make me want to be a better person. i love you because of how you make me feel even when you’re not around. and i love how you make me feel like i’m home. but i love the small things too like how my hand fits perfectly in yours, how nice and sweet ur voice is, how soft ur lips are. and honestly i know i’m in love because i notice small things about you. I want you to know that I am here for you — always. Through the good times and the bad, through the moments of doubt and the moments of clarity, I will stand by you. I may not have all the answers, and I can’t promise that everything will always be perfect, but I can promise that my heart is entirely yours.";
+    var a = 0, finish; finish = "So please, don't ever forget that i love you. today. tonight. tomorrow. forever. if i were to live a thousand years, i would always belong to you for all of them. if i were to live a thousand lives, i would want to be yours in each one. i will be always in love with you. and I love that I'm in love with you. i love the feelings. the happiness when i think of you, the butterflies when you text me, the excitement i get when i know you love me too. it's amazing, and you're amazing. you will always be my favorite destination, my home, and my whole heart. i love to love you, my man. thank you.. fore the precious first one year ❤️";
 
-    function bukaWa() {window.location = "https://t.me/hmeseung"}
+    function bukaWa() {window.location = "https://t.me/lipglowz"}
 
     function play() {
       //Link Audio Bisa Diganti
@@ -96,7 +91,8 @@
       allowOutsideClick: false,
     });
     async function mulai() {
-      await swals.fire('hi pretty, this is all the things i wanna say to you.');
+      await swals.fire('hey there, my love');
+      await swals.fire('may i remind you? ');
       setTimeout(check, 1000); setTimeout(teks1, 1000); play();
     }
 
@@ -114,7 +110,7 @@
     function teks7() {document.getElementById('text7').style.display = "inline-block"; document.getElementById('text7').style.opacity = "1"; setTimeout(teks8, 4000); scroll()}
     function teks8() {document.getElementById('text8').style.display = "inline-block"; document.getElementById('text8').style.opacity = "1"; setTimeout(teks10, 5000); scroll()}
     function teks10() {document.getElementById('text10').style.display = "inline-block"; document.getElementById('text10').style.opacity = "1"; setTimeout(teks11, 4000); scroll()}
-    function teks11() {document.getElementById('text11').style.display = "inline-block"; document.getElementById('text11').style.opacity = "1"; setTimeout(tek12, 3000); scroll()}
+    function teks11() {document.getElementById('text11').style.display = "inline-block"; document.getElementById('text11').style.opacity = "1"; setTimeout(tek9, 3000); scroll()}
     function teks12() {document.getElementById('text12').style.display = "inline-block"; document.getElementById('text12').style.opacity = "1"; setTimeout(teks13, 3800); scroll()}
     function teks13() {document.getElementById('text13').style.display = "inline-block"; document.getElementById('text13').style.opacity = "1"; setTimeout(teks14, 5300); scroll()}
     function teks14() {document.getElementById('text14').style.display = "inline-block"; document.getElementById('text14').style.opacity = "1"; setTimeout(teks15, 5500); scroll()}
