--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     //Ucapan Terakhir
     var a = 0, finish; finish = "So please, don't ever forget that i love you. today. tonight. tomorrow. forever. if i were to live a thousand years, i would always belong to you for all of them. if i were to live a thousand lives, i would want to be yours in each one. i will be always in love with you. and I love that I'm in love with you. i love the feelings. the happiness when i think of you, the butterflies when you text me, the excitement i get when i know you love me too. it's amazing, and you're amazing. you will always be my favorite destination, my home, and my whole heart. i love to love you, my man. thank you.. fore the precious first one year ❤️";
 
-    function bukaWa() {window.location = "https://t.me/lipglowz"}
+    function bukaWa() {window.location = "https://anouther.github.io/little-ggift/"}
 
     function play() {
       //Link Audio Bisa Diganti
